Fri May 21 19:11:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/nkf/nkf.c (rb_nkf_convert, rb_nkf_guess): check too huge
	  string.

Thu May 20 22:19:37 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_eval.c (rb_f_caller): update rdoc.  a patch from Nobuhiro IMAI
	  <nov at yo.rim.or.jp> in [ruby-dev:41348].

Thu May 20 22:17:24 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm.c (vm_backtrace_each): now takes an init function to distinguish
	  an empty stack from out of stack.  [ruby-dev:41366]

	* vm_eval.c (print_backtrace, rb_thread_backtrace): ditto.

Wed May 19 22:48:06 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb: mswin/mingw ruby has socketpair(), but it's
	  not exist as such name in ruby static library, so mkmf.rb cannot
	  find it.

Wed May 19 20:09:38 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_eval.c (rb_f_caller): return [] instead of nil when the function
	  is called on toplevel.  [ruby-dev:41348]

Wed May 19 20:06:11 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* iseq_compile_each (NODE_DEFINED): put nil first to fix stack
	  consistency.  [ruby-core:30293]
	  Now, lfinish[0] of defined_expr seems not to be used.  Refactoring
	  may be needed.

Wed May 19 17:22:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.h (RUBY_VERSION_TEENY): revert to API version 1.9.1.

Wed May 19 10:46:05 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (argv_size): merged into join_argv() to maintain the
	  agreement with it.  removed code has a calclulation bug.
	  fixed [Bug#2388]

	* win32/win32.c (join_argv): calc and return the length of joined
	  argv.
	  the cause of the original bug was clarified by Masaya TARUI
	  <tarui AT prx.jp> and the solution was suggested by him, too.

Mon May 17 11:09:58 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::Entry_#entries): returns pathname in
	  UTF-8 on Windows to allow FileUtils accessing all pathnames
	  internally.
